# xforce-monorepo

./: .gitignore  Cargo.toml  README.md  index.html  roadmap-complete.txt  roadmap-month1.txt  roadmap-month2.txt  roadmap-month3.txt  start-crypto-info.bat  start-terminal.bat  temp_app.jsx  xfterminal.code-workspace
.github/workflows/: deploy.yml
assets/: index--Gcnt7IQ.js  index-8UKPz4Gq.js  index-BihJXbE8.css  index-CUdyZrLo.css  index-DZD7zeGc.js  index-Qc2mEY9C.js  index-Zr1S_mxh.css
docs/: integrations.html
main/: Cargo.toml  README.md
main/src/: main.rs
references/hft/: README.md
references/plans/: geyser-implementation-skills.md  master-technical-evolution-plan.md  pinocchio-integration-analysis.md  xfterminal-current-skills.md
web-app/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web-app/public/: 404.html
web-app/src/: App.jsx  index.css
xforce-crypto-info/: BACKEND_API_ANALYSIS.md  CRYPTO_NEWS_SERVICE_PLAN.md  Cargo.toml  README.md  init_db.py  init_db.sql  news.db  start.bat
xforce-crypto-info/news-scraper/: README.md  config.py  main.py  requirements.txt  scrape_once.py
xforce-crypto-info/news-scraper/processors/: data_processor.py  sentiment_analyzer.py
xforce-crypto-info/news-scraper/scrapers/: api_scraper.py  rss_scraper.py
xforce-crypto-info/news-scraper/writers/: __init__.py  db_writer.py
xforce-crypto-info/news-service/: .env.example  Cargo.toml
xforce-crypto-info/news-service/src/: main.rs
xforce-crypto-info/news-web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
xforce-crypto-info/news-web/src/: App.tsx  index.css
xforce-crypto-info/news-web/src/components/: ArticleCard.tsx  ArticleList.tsx  CategoryFilter.tsx  FreeNewsCard.tsx  SearchBar.tsx
xforce-crypto-info/news-web/src/hooks/: useArticles.ts
xforce-crypto-info/news-web/src/pages/: ArticleDetail.tsx  Category.tsx  FreeNews.tsx  Home.tsx
xforce-crypto-info/news-web/src/services/: newsApi.ts
xforce-crypto-info/news-web/src/types/: article.ts
xforce-crypto-info/ref/: README.md
xforce-guide/: index.html  package-lock.json  package.json  vite.config.ts
xforce-guide/src/: App.tsx  index.css
xforce-guide/src-tauri/: tauri.conf.json
xforce-terminal/: Cargo.toml  README.md
xforce-terminal-contracts/: README.md
xforce-terminal-contracts/client/: Cargo.toml  README.md
xforce-terminal-contracts/client/src/: lib.rs
xforce-terminal-contracts/docs/: README.md
xforce-terminal-contracts/examples/: Cargo.toml  README.md  cli.rs
xforce-terminal-contracts/programs/: Cargo.toml  README.md
xforce-terminal/backend/: Cargo.toml  README.md
xforce-terminal/backend/src/: main.rs
xforce-terminal/crates/: README.md
xforce-terminal/crates/libs/: README.md
xforce-terminal/crates/libs/lib-auth/: Cargo.toml  README.md
xforce-terminal/crates/libs/lib-auth/src/: lib.rs
xforce-terminal/crates/libs/lib-auth/src/pwd/: mod.rs
xforce-terminal/crates/libs/lib-auth/src/token/: mod.rs
xforce-terminal/crates/libs/lib-core/: Cargo.toml  README.md
xforce-terminal/crates/libs/lib-core/src/: config.rs  error.rs  lib.rs
xforce-terminal/crates/libs/lib-core/src/dto/: auth.rs  market.rs  messaging.rs
xforce-terminal/crates/libs/lib-social-fi/: Cargo.toml  build_errors.txt  error.txt
xforce-terminal/crates/libs/lib-social-fi/src/: db.rs  error.rs  identity.rs  lib.rs  node.rs
xforce-terminal/crates/libs/lib-solana/: Cargo.toml  README.md
xforce-terminal/crates/libs/lib-solana/src/: client.rs  lib.rs  mod_rs.rs  price_stream.rs  pyth.rs  pyth_tokens.rs  types.rs
xforce-terminal/crates/libs/lib-solana/src/contracts/: mod.rs
xforce-terminal/crates/libs/lib-solana/src/jupiter/: price.rs
xforce-terminal/crates/libs/lib-strategy/: Cargo.toml
xforce-terminal/crates/libs/lib-strategy/src/: error.rs  lib.rs  models.rs
xforce-terminal/crates/libs/lib-strategy/src/examples/: basic_mm.rs  mod.rs
xforce-terminal/crates/libs/lib-utils/: README.md
xforce-terminal/crates/libs/lib-utils/src/: lib.rs
xforce-terminal/crates/libs/lib-web/: Cargo.toml  README.md
xforce-terminal/crates/libs/lib-web/src/: lib.rs  server.rs  types.rs
xforce-terminal/crates/libs/lib-web/src/handlers/: market.rs  transaction.rs
xforce-terminal/crates/utils/: README.md
xforce-terminal/crates/utils/clear-users/: Cargo.toml  README.md
xforce-terminal/docs/: README.md
xforce-terminal/idl/: README.md
xforce-terminal/migrations/: README.md
xforce-terminal/terminal-tauri/: README.md  errors.txt
xforce-terminal/terminal-tauri/src-tauri/: Cargo.toml  tauri.conf.json
xforce-terminal/terminal-tauri/src-tauri/capabilities/: default.json
xforce-terminal/terminal-tauri/src-tauri/icons/: icon.icns
xforce-terminal/terminal-tauri/src-tauri/src/: lib.rs  main.rs
xforce-terminal/terminal-tauri/src-tauri/src/commands/: market.rs  mod.rs  social.rs  swap.rs  wallet.rs
xforce-terminal/terminal-tauri/src-tauri/src/services/: market.rs  mod.rs  solana.rs
xforce-terminal/terminal-tauri/src-ui/: index.html  npm_err.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
xforce-terminal/terminal-tauri/src-ui/src/: App.tsx  index.css  vite-env.d.ts
xforce-terminal/terminal-tauri/src-ui/src/components/: Chart.tsx  Layout.tsx  NewsPanel.tsx  PriceTable.tsx  PythPricePanel.tsx  Sidebar.tsx  StatusBar.tsx  SwapPanel.tsx
xforce-terminal/terminal-tauri/src-ui/src/hooks/: useTauri.ts
xforce-terminal/terminal-tauri/src-ui/src/pages/: Login.tsx  Settings.tsx  Social.tsx  Terminal.tsx  Wallet.tsx
xforce-terminal/terminal-tauri/src-ui/src/stores/: terminalStore.ts
xforce-terminal/wallet-react/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
xforce-terminal/wallet-react/src/: App.tsx  index.css
xforce-terminal/wallet-react/src/components/: Starfield.tsx
xforce-terminal/wallet-react/src/pages/: Connect.tsx  SignTransaction.tsx  Status.tsx  WalletSetup.tsx
xforce-terminal/wallet-react/src/stores/: walletStore.ts
(+50 files in other folders)
