[workspace]
resolver = "2"

members = [
    # XForce Terminal
    "xforce-terminal/backend",
    "xforce-terminal/crates/libs/lib-core",
    "xforce-terminal/crates/libs/lib-auth",
    "xforce-terminal/crates/libs/lib-web",
    "xforce-terminal/crates/libs/lib-solana",
    "xforce-terminal/crates/libs/lib-utils",
    "xforce-terminal/crates/utils/clear-users",
    "xforce-terminal/terminal-tauri/src-tauri",
    "xforce-terminal/crates/libs/lib-strategy",
    "xforce-terminal/crates/libs/lib-social-fi",

    # XForce Terminal Contracts - Client and Examples only
    "xforce-terminal-contracts/client",
    "xforce-terminal-contracts/examples",
    "xforce-guide/src-tauri",
]

[workspace.dependencies]
# Internal crates
lib-core = { path = "xforce-terminal/crates/libs/lib-core" }
lib-auth = { path = "xforce-terminal/crates/libs/lib-auth" }
lib-web = { path = "xforce-terminal/crates/libs/lib-web" }
lib-solana = { path = "xforce-terminal/crates/libs/lib-solana" }
lib-social-fi = { path = "xforce-terminal/crates/libs/lib-social-fi" }
lib-utils = { path = "xforce-terminal/crates/libs/lib-utils" }

# Core dependencies
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
chrono = { version = "0.4.44", features = ["serde"] }

# Solana dependencies - latest versions (Solana 3.x with Anchor 1.0)
solana-program = "3.0.0"
solana-sdk = "3.0.0"
solana-client = "3.1.9"
solana-transaction-status = "3.1.9"
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
anchor-client = "0.32.1"
spl-token = "9.0.0"
spl-associated-token-account = "8.0.0"

# Web/Axum dependencies
axum = "0.8.8"
tower = "0.5.3"
tower-http = "0.6.8"
hyper = "1.8.1"

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
] }

# Encoding
bs58 = "0.5.1"

# Async
async-trait = "0.1.89"
futures = "0.3.32"

# HTTP
reqwest = { version = "0.13.2", features = ["json", "query"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true


