[workspace]
members = [
    "news-service",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
codegen-units = 1
lto = true
