[workspace]
members = ["news-service"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json"] }

[profile.release]
codegen-units = 1
lto = true
