[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["XForce Team"]
license = "Apache-2.0"
repository = "https://github.com/xforce/xforce-terminal"
description = "Non-custodial Solana DeFi trading terminal"

[workspace]
members = [
    "crates/libs/lib-core",
    "crates/libs/lib-auth",
    "crates/libs/lib-web",
    "crates/libs/lib-solana",
    "crates/libs/lib-utils",
    "crates/utils/clear-users",
    "backend",
    "terminal-tauri/src-tauri",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.43", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls", "stream"] }
bs58 = "0.5"

# Internal crates
lib-core = { path = "crates/libs/lib-core" }
lib-auth = { path = "crates/libs/lib-auth" }
lib-web = { path = "crates/libs/lib-web" }
lib-solana = { path = "crates/libs/lib-solana" }
lib-utils = { path = "crates/libs/lib-utils" }
