[package]
name = "news-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tower-http = { version = "0.5.2", features = ["cors"] }
serde = { workspace = true }
serde_json = "1.0"

# Async runtime
tokio = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Environment
dotenvy = "0.15"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

[[bin]]
name = "news-service-server"
path = "src/main.rs"

[features]
default = []
