[package]
name = "xforce-terminal-contracts-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for XForce Terminal contracts"

[dependencies]
anchor-client = "0.29"
anchor-lang = "0.29"
solana-client = "1.16"
solana-sdk = "1.16"
solana-program = "1.16"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1.43", features = ["full"] }
