[package]
name = "xforce-terminal-contracts-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for XForce Terminal contracts"

[dependencies]
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
solana-commitment-config = "3.1.1"
anyhow = "1.0.102"
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }
