[package]
name = "xforce-terminal-contracts-examples"
version = "0.1.0"
edition = "2021"

[[example]]
name = "terminal_integration"
path = "terminal_integration.rs"

[[example]]
name = "cli"
path = "cli.rs"

[dependencies]
xforce-terminal-contracts-client = { path = "../client" }
tokio = { version = "1.50.0", features = ["full"] }
solana-sdk = { workspace = true }
solana-client = { workspace = true }

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-transaction-status = { workspace = true }
