[workspace]
members = ["batch-swap-router"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anchor-lang = "1.0.0-rc.2"
anchor-spl = "1.0.0-rc.2"
solana-program = "2.0.25"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
