[package]
name = "terminal-tauri"
version = "0.1.0"
description = "XForce Terminal - Tauri Edition"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "terminal_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "terminal-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.3.5", features = ["tray-icon"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.3.5"
tauri-plugin-http = { version = "2.3.5", default-features = false, features = [] }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"

# Solana - workspace versions
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Random
rand = "0.9.2"
uuid = { version = "1.20.0", features = ["v4"] }

# Internal crates
lib-core = { workspace = true }
lib-solana = { workspace = true }
lib-social-fi = { workspace = true }
