[package]
name = "lib-solana"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core libraries
lib-core = { workspace = true }

# Solana dependencies - v1.16 for maximum compatibility
solana-client = "1.16"
solana-sdk = "1.16"
solana-program = "1.16"
spl-token = "4"
spl-associated-token-account = "2"
bs58 = { workspace = true }
base64 = "0.22"
bincode = "1.3"

# Anchor & Contract Integration - 0.29 for Solana 1.16 compatibility
async-trait = "0.1"
anchor-client = "0.29"
anchor-lang = "0.29"
anchor-spl = "0.29"
xforce-terminal-contracts-client = { path = "../../../../xforce-terminal-contracts/client" }

# HTTP client
reqwest = { workspace = true }

# Web framework
axum = "0.8"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { workspace = true }

# Utilities
hex = "0.4"

# Logging
tracing = "0.1"
