[package]
name = "lib-solana"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core libraries
lib-core = { workspace = true }

# Solana dependencies - workspace versions
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
bs58 = { workspace = true }
base64 = "0.22.1"
bincode = "1.3"

# Anchor & Contract Integration
async-trait = "0.1.89"
anchor-client = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
xforce-terminal-contracts-client = { path = "../../../../xforce-terminal-contracts/client" }

# HTTP client
reqwest = { workspace = true }

# Web framework
axum = "0.8.8"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Async runtime
tokio = { workspace = true }

# Utilities
hex = "0.4.3"

# Logging
tracing = { workspace = true }
