[package]
name = "lib-web"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core libraries
lib-core = { workspace = true }
lib-auth = { workspace = true }
lib-solana = { workspace = true }
lib-social-fi = { path = "../lib-social-fi" }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client
reqwest = { workspace = true }

# WebSocket support
futures-util = "0.3"
tokio-stream = "0.1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }

# AI chat integration (optional) - disabled due to dependency conflicts
# genai = { version = "0.4", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database - use 0.6 for compatibility
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Environment variables
dotenvy = "0.15"

# Solana SDK
solana-sdk = { workspace = true }
bs58 = "0.5.1"

# Serialization/Encoding
base64 = "0.22.1"
bincode = "1.3"

# Time
chrono = { workspace = true }

[features]
genai = []
